--- a/style.css
+++ b/style.css
@@ -7,7 +7,19 @@
 } */
 
 p {
-    color: #FFF
+    color: #FFF;
+}
+
+.card {
+    margin: 10px;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-color: rgb(0, 225, 255);
+    border-width: 3px;
+    border-style: solid;
+    padding: 20px;
 }
 
 .animate {
